<resources>
    <string name="app_name">YouTaskk</string>
    <string name="home">Home</string>
    <string name="tambahTugas">Tambah Tugas</string>
    <string name="histori">Riwayat Tugas</string>
    <string name="exit">Keluar</string>


        <string-array name="list_tugas">
            <item>Tugas 1</item>
            <item>Tugas 2</item>
            <item>Tugas 3</item>
            <item>Tugas 4</item>
            <item>Tugas 5</item>
            <item>Tugas 6</item>
            <item>Tugas 7</item>
            <item>Tugas 8</item>
            <item>Tugas 9</item>
        </string-array>
        <string-array name="deskripsi">
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
            <item>Ini Deskripsi</item>
        </string-array>
        <string-array name="tanggal">
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
            <item>10-APRIL-2021</item>
        </string-array>
        <string-array name="list_tugas_selesai">
            <item>Tugas 10</item>
            <item>Tugas 11</item>
            <item>Tugas 12</item>
            <item>Tugas 13</item>
            <item>Tugas 14</item>
            <item>Tugas 15</item>
            <item>Tugas 16</item>
            <item>Tugas 17</item>
        </string-array>
        <string-array name="deskripsi_selesai">
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
            <item>Tugas Selesai</item>
        </string-array>
        <string-array name="tanggal_selesai">
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
            <item>10-FEB-2021</item>
        </string-array>

        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="title_activity_splash">SplashActivity</string>
    <string name="adolfo_miaoxi">Adolfo Miaoxi</string>
    <string name="title">Title</string>
    <string name="date">10-AGUSTUS-2021</string>
    <string name="catatan">Catatan</string>
    <string name="deadline">Deadline</string>
    <string name="tanggal_pengerjaan">Tanggal Pengerjaan</string>
    <string name="nama_tugas">Nama Tugas</string>
    <string name="tambah_tugas">Tambah Tugas</string>
    <string name="prioritas">Prioritas</string>
    <string name="tambah">Tambah</string>
    <string name="empty_not_saved">Kosong</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>