<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddNewTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_tugas"
            android:textSize="50sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_tugas"
                android:textSize="20sp"/>

            <View
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:background="#E2CD44"
                android:layout_marginTop="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_pengerjaan"
                android:textSize="20sp"/>

            <View
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:background="#E2CD44"
                android:layout_marginTop="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textSize="20sp"/>

            <View
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:background="#E2CD44"
                android:layout_marginTop="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catatan"
                android:textSize="20sp"/>

            <View
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:background="#E2CD44"
                android:layout_marginTop="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/prioritas"-->
<!--                android:textSize="20sp"/>-->

<!--            <Switch-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:layout_marginLeft="15dp"-->
<!--                android:id="@+id/prioritas"/>-->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/tambah"
                    android:background="#3C3F41"
                    android:id="@+id/addTask"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>